test/fail/basic_syntax/missing_return.lly
#[
SyntaxError: Missing return statement at end of function.
    from missing_return.lly:6:
]#

define f : Integer {  }
